# Forgotten-Realm

./: CMakeLists.txt  README.md
docs/: 1. Entry Point.md  2. Renderer.md  Resources.md
src/: Game.cpp  Game.h  main.cpp
src/Renderer/: EBO.cpp  EBO.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h  stb_image.cpp
src/Shaders/: default.frag  default.vert
